# guile

./: .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  Dockerfile  Makefile.am  NEWS  README-release  README.md  bootstrap  bootstrap.conf  bootstrap.sh  build.sh  cfg.mk  configure.ac  guix.scm  maint.mk  notes.org  test.sh  test2.sh  test2_gdb.sh  test3.sh  test4.sh  test5.sh  test6.sh  valgrind.sh
doc/: Makefile.am  abs-top-srcdir.texi.in  cha-copying.texi  extract-guile-c-doc.scm  gnutls-guile.texi
gl/top/: README-release.diff  maint.mk.diff
guile/: Makefile.am  pre-inst-guile.in
guile/examples/: aead-decrypt-example.scm  aead-encrypt-example.scm  base16-example.scm  base64-example.scm  base64url-example.scm  generate-private-key.scm  hash-example.scm  hmac-example-1.scm  hmac-example-2.scm  hmac-example-3.scm  low-level-cipher-example.scm  random-example.scm  use-private-key.scm
guile/modules/: gnutls.in
guile/modules/gnutls/: extra.scm
guile/modules/system/documentation/: README  c-snarf.scm  output.scm
guile/src/: Makefile.am  core.c  errors.c  errors.h  make-enum-header.scm  make-enum-map.scm  make-smob-header.scm  make-smob-types.scm  utils.c  utils.h
guile/tests/: aead.scm  anonymous-auth.scm  asymmetric-crypto.scm  base64.scm  cipher.scm  errors.scm  hash.scm  hmac.scm  list-ecc-curves.scm  list-pk-algorithms.scm  list-sign-algorithms.scm  pkcs-import-export.scm  premature-termination.scm  priorities.scm  random.scm  reauth.scm  session-record-port.scm  srp-base64.scm  x509-auth.scm  x509-certificate-generation.scm  x509-certificates.scm  x509-to-abstract.scm
lib/: time.in.h
libguile/: Makefile.am  bdw-gc.h  finalizers.c  gc-inline.h  gc-malloc.c  gc.c  gc.h  gen-scmconfig.c  gsubr.c  guardians.c  init.c  intrinsics.c  introspector.cc  introspector.h  jit.c  loader.c  notes.org  pairs.h  scm.h  scmsigs.c  smob.c  stacks.h  symbols.c  threads.c  vm-engine.c  vm.c  weak-set.c  weak-table.c  weak-vector.c
m4/: guile.m4
stage0/: notes.org  run.sh
